RESOLVED FIXED160359
Scrolling leaves artifacts when frame-level RTL vertical scrollbar is present
https://bugs.webkit.org/show_bug.cgi?id=160359
Summary Scrolling leaves artifacts when frame-level RTL vertical scrollbar is present
Antonio Gomes
Reported 2016-07-29 15:01:23 PDT
Now that frame-level vertical scrollbar can be placed on the left side (either in accordance to the associated system preference or to the web content direction), the rect "copied on scroll" should respect.
Attachments
patch v1 (2.18 KB, patch)
2016-07-29 15:05 PDT, Antonio Gomes
no flags
patch v1.1 - with a changelog entry. (2.76 KB, patch)
2016-07-29 15:19 PDT, Antonio Gomes
beidson: review-
buildbot: commit-queue-
Archive of layout-test-results from ews122 for ios-simulator-wk2 (776.45 KB, application/zip)
2016-07-29 16:29 PDT, Build Bot
no flags
WIP patch (1.68 KB, patch)
2024-06-11 14:32 PDT, Fujii Hironori
ews-feeder: commit-queue-
WIP patch (1.38 KB, patch)
2024-06-12 14:34 PDT, Fujii Hironori
no flags
Patch to add a ref test but it doesn't work (1.76 KB, patch)
2024-06-12 17:15 PDT, Fujii Hironori
no flags
Antonio Gomes
Comment 1 2016-07-29 15:01:41 PDT
This is reproducible on the Gtk port (minibrowser), but it seems not to be Gtk specific.
Antonio Gomes
Comment 2 2016-07-29 15:05:33 PDT
Created attachment 284906 [details] patch v1 Similar patches (touching ::rectToCopyOnScroll) did not come accompanied by a test. I am open to ideas.
Antonio Gomes
Comment 3 2016-07-29 15:19:37 PDT
Created attachment 284908 [details] patch v1.1 - with a changelog entry.
Build Bot
Comment 4 2016-07-29 16:29:46 PDT
Comment on attachment 284908 [details] patch v1.1 - with a changelog entry. Attachment 284908 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/1775832 Number of test failures exceeded the failure limit.
Build Bot
Comment 5 2016-07-29 16:29:49 PDT
Created attachment 284915 [details] Archive of layout-test-results from ews122 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews122 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.5
Antonio Gomes
Comment 6 2016-07-29 16:43:12 PDT
(In reply to comment #4) > Comment on attachment 284908 [details] > patch v1.1 - with a changelog entry. > > Attachment 284908 [details] did not pass ios-sim-ews (ios-simulator-wk2): > Output: http://webkit-queues.webkit.org/results/1775832 > > Number of test failures exceeded the failure limit. Interesting. If the ios-sim failing tests do not set dir=rtl to a frame level, they should not be affected.
Darin Adler
Comment 7 2016-07-31 21:05:50 PDT
Comment on attachment 284908 [details] patch v1.1 - with a changelog entry. Can we create a regression test? Normally the WebKit project requires a regression test for any bug fix or an explanation of why the author of the patch couldn’t figure out how to write one.
Michael Catanzaro
Comment 8 2016-09-08 20:44:52 PDT
(In reply to comment #7) > Comment on attachment 284908 [details] > patch v1.1 - with a changelog entry. > > Can we create a regression test? Normally the WebKit project requires a > regression test for any bug fix or an explanation of why the author of the > patch couldn’t figure out how to write one. Antonio, do you have availability to pick this up again?
Brady Eidson
Comment 9 2017-08-19 16:03:15 PDT
Comment on attachment 284908 [details] patch v1.1 - with a changelog entry. r-, as this has been pending review for over a year now. It is near-impossible that this patch still applies to trunk and unlikely to still be relevant in its current form.
Ahmad Saleem
Comment 10 2023-03-17 17:26:53 PDT
I can see this line which this patch is trying to modify in the code: https://searchfox.org/wubkat/source/Source/WebCore/platform/ScrollView.cpp#808 Only change is change of "shouldPlaceVerticalScrollbarOnLeft" from "shouldPlaceBlockDirectionScrollbarOnLeft". It does not have test case, so I don't know whether it will fix anything or not.
Ahmad Saleem
Comment 11 2023-03-17 17:28:31 PDT
(In reply to Ahmad Saleem from comment #10) > I can see this line which this patch is trying to modify in the code: > > https://searchfox.org/wubkat/source/Source/WebCore/platform/ScrollView. > cpp#808 > > Only change is change of "shouldPlaceVerticalScrollbarOnLeft" from > "shouldPlaceBlockDirectionScrollbarOnLeft". > > It does not have test case, so I don't know whether it will fix anything or > not. Just to update, it compiles on WebKit Trunk based of "261814@main" as well.
Ahmad Saleem
Comment 12 2023-03-22 13:04:48 PDT
(In reply to Ahmad Saleem from comment #11) > (In reply to Ahmad Saleem from comment #10) > > I can see this line which this patch is trying to modify in the code: > > > > https://searchfox.org/wubkat/source/Source/WebCore/platform/ScrollView. > > cpp#808 > > > > Only change is change of "shouldPlaceVerticalScrollbarOnLeft" from > > "shouldPlaceBlockDirectionScrollbarOnLeft". > > > > It does not have test case, so I don't know whether it will fix anything or > > not. > > Just to update, it compiles on WebKit Trunk based of "261814@main" as well. IntRect scrollViewRect = convertToRootView(IntRect((shouldPlaceVerticalScrollbarOnLeft() && m_verticalScrollbar) ? m_verticalScrollbar->occupiedWidth() : 0, 0, visibleWidth(), visibleHeight())); ^ Just posting for quick copy paste for someone in future.
Fujii Hironori
Comment 13 2024-06-11 14:06:53 PDT
*** Bug 275338 has been marked as a duplicate of this bug. ***
Fujii Hironori
Comment 14 2024-06-11 14:07:21 PDT
attachment#471646 [details] is the test case. This is only for non-AC mode. Mac WK2 doesn't support non-AC mode. Mac WK1, GTK, Windows, PlayStation ports support non-AC mode. However, Mac WK1 shows the vertial scroll bar on right side. This isn't reproducible for Mac WK1. GTK port still supports non-AC mode, but uses AC mode by default.
Fujii Hironori
Comment 15 2024-06-11 14:32:12 PDT
Created attachment 471652 [details] WIP patch
Fujii Hironori
Comment 16 2024-06-12 14:34:01 PDT
Created attachment 471665 [details] WIP patch
Fujii Hironori
Comment 17 2024-06-12 17:15:41 PDT
Created attachment 471667 [details] Patch to add a ref test but it doesn't work I tried to create a ref test. But, it seems to be unable test this paint glitch with a ref test.
Fujii Hironori
Comment 18 2024-06-13 22:05:53 PDT
EWS
Comment 19 2024-06-18 21:00:18 PDT
Committed 280155@main (fe975b3d7ff6): <https://commits.webkit.org/280155@main> Reviewed commits have been landed. Closing PR #29807 and removing active labels.
Radar WebKit Bug Importer
Comment 20 2024-06-18 21:01:18 PDT
Note You need to log in before you can comment on or make changes to this bug.