Source/WebCore/platform/graphics/IntRect.h
@@ -144,10 +144,20 @@ public:
         setWidth(std::max(0, width() - delta));
     }
 
+    void shiftMaxXEdgeBy(int delta)
+    {
+        setWidth(std::max(0, width() + delta));
+    }
+
     void shiftYEdgeBy(int delta)
     {
         move(0, delta);
         setHeight(std::max(0, height() - delta));
+    }
+
+    void shiftMaxYEdgeBy(int delta)
+    {
+        setHeight(std::max(0, height() + delta));
     }
 
     IntPoint minXMinYCorner() const { return m_location; } // typically topLeft
